--- a/aula11/ex10.html
+++ b/aula11/ex10.html
@@ -20,7 +20,7 @@
     var vel = Number(txtv.value)
     res.innerHTML = `<p>Sua velocidade atual é de <strong>${vel}Km/h =0</strong></p>`
     if (vel > 60) {
-        res.innerHTML += `<p>Você está <strong>BISSEXUALIZADO..</strong> STOP!!</p>`
+        res.innerHTML += `<p>Você está <strong> MULTADO..</strong> STOP!!</p>`
     }
     res.innerHTML += `<p>Tá Quente pra Kawaaaka!</p>`
     }
